fixed private pick em leagues

--- a/app/views/league_users/confirm.html.erb
+++ b/app/views/league_users/confirm.html.erb
@@ -5,6 +5,8 @@
       <%= render 'leagues/snake_info' %>
     <% when 'pick_x' %>
       <%= render 'leagues/pick_x_info' %>
+    <% when 'pick_em' %>
+      <%= render 'leagues/pick_em_info' %>
     <% end %>
     <div id="league-user" class="confirm">
       <h3>Please Accept or Decline Your Invitiation</h3>
