--- a/app/views/league_users/index.html.erb
+++ b/app/views/league_users/index.html.erb
@@ -7,6 +7,8 @@
       <%= render 'leagues/snake_info' %>
     <% when 'pick_x' %>
       <%= render 'leagues/pick_x_info' %>
+    <% when 'pick_em' %>
+      <%= render 'leagues/pick_em_info' %>
     <% end %>
 
     <h3>Registered Users</h3>
