--- a/app/views/seasons/leagues/index.html.erb
+++ b/app/views/seasons/leagues/index.html.erb
@@ -47,7 +47,7 @@
           </tr>
         </thead>
         <tbody>
-          <% League.joins('LEFT JOIN seasons ON seasons.id = leagues.leagueable_id').where('seasons.id = ? AND seasons.start_date > ? AND leagues.public = ?', @season.id, Time.now, true).each do |league| %>
+          <% League.joins('LEFT JOIN seasons ON seasons.id = leagues.leagueable_id').where('seasons.id = ? AND seasons.start_date > ? AND leagues.public = ?', @season.id, Date.today - 1.day, true).each do |league| %>
             <tr>
               <td>
                 <%= league.name %>
