--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -3,6 +3,7 @@
     <div>
       <h1>Featured <%= @game.name %> Events</h1>
     </div>
+    <% if @seasons %>
     <div>
       <h3>Seasons</h3>
       <% @seasons.each do |season| %>
@@ -36,6 +37,7 @@
         </div>
       <% end %>
     </div>
+    <% end %>
     <div>
       <h3>Single Events</h3>
       <% if @competitions.where("start_date >= ? AND start_date <= ?", Time.now, Time.now + 2.weeks).length > 0 %>
