--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -13,7 +13,8 @@ $gray-900: #212529;
 $black:    #191919;
 
 
-$blue:    #4582EC;
+// $blue:    #4582EC;
+$blue:    #55a3dd;
 $indigo:  #6610f2;
 // $purple:  #6f42c1;
 $purple:  #453c77;
@@ -28,7 +29,7 @@ $cyan:    #17a2b8;
 $primary:       $purple;
 $secondary:     $gray-500;
 $success:       $green;
-$info:          $cyan;
+$info:          $blue;
 $warning:       $yellow;
 $danger:        $red;
 $light:         $gray-100;
