--- a/app/views/leagues/_pick_x_info.html.erb
+++ b/app/views/leagues/_pick_x_info.html.erb
@@ -29,7 +29,7 @@
     <strong>Pick Type:</strong> <%= @league.pick_type&.titleize %>
   </p>
   <p>
-    <strong>Entry:</strong> Free
+    <strong>Entry:</strong> <%= @league.entry %>
   </p>
   <p>
     <strong>Players Per Team:</strong> <%= @league.num_draft_rounds %>
