--- a/app/views/seasons/leagues/join.html.erb
+++ b/app/views/seasons/leagues/join.html.erb
@@ -12,7 +12,7 @@
         <em>Public league</em>
       </p>
       <p>
-        <strong>Entry:</strong> Free
+        <strong>Entry:</strong> <%= @league.entry %>
       </p>
       <p>
         <strong>Draft Type:</strong> <%= @league.draft_type.humanize.titleize %>
