--- a/app/views/admin/leagues/new.html.erb
+++ b/app/views/admin/leagues/new.html.erb
@@ -10,7 +10,7 @@
 
       <div class="form-group required">
         <%= f.label :leagueable_id, "Competition", class: "control-label" %>
-        <%= select_tag "league[leagueable_id]", options_from_collection_for_select(@leagueables, 'id', 'name'), include_blank: "Select League Type", required: true, class: "form-control" %>
+        <%= select_tag "league[leagueable_id]", options_from_collection_for_select(@leagueables, 'id', 'name'), include_blank: "Select Competition", required: true, class: "form-control" %>
       </div>
 
       <div class="form-group required">
@@ -26,6 +26,16 @@
       <div class="form-group required">
         <%= f.label :public, "Public League?", class: "control-label" %>
         <%= select_tag "league[public]", options_for_select(%w[True False]), include_blank: "Select Public Setting", required: true, class: "form-control" %>
+      </div>
+
+      <div class="form-group required">
+        <%= f.label :paid_entry, "Paid Entry?", class: "control-label" %>
+        <%= select_tag "league[paid_entry]", options_for_select(%w[True False]), include_blank: "Select Paid Setting", required: true, class: "form-control" %>
+      </div>
+
+      <div class="form-group required">
+        <%= f.label :entry_fee, 'Entry Fee (in cents)', class: "control-label" %>
+        <%= f.text_field :entry_fee, required: true, class: "form-control" %>
       </div>
 
       <div class="form-group required">
