--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -102,17 +102,17 @@
               <h3>Upcoming Events</h3>
               <div class="event-container">
                 <a href="/games/mtg/seasons/vsls9/leagues" class="homepage-event-link">
-                  <p class="event-button">Vintage Super League (Jan 15&mdash;Mar 3/26)</p>
-                </a>
-              </div>
-              <div class="event-container">
-                <a href="/games/mtg/competitions/" class="homepage-event-link">
-                  <p class="event-button">MF New Jersey (January 25-27)</p>
+                  <p class="event-button">Vintage Super League (Jan 15-Mar 3/26)</p>
                 </a>
               </div>
               <div class="event-container">
                 <a href="/games/mtg/competitions/" class="homepage-event-link">
                   <p class="event-button">MC Cleveland (February 22-24)</p>
+                </a>
+              </div>
+              <div class="event-container">
+                <a href="/games/mtg/competitions/" class="homepage-event-link">
+                  <p class="event-button">Mythic Invitational (March 28-31)</p>
                 </a>
               </div>
             </div>
