--- a/app/views/seasons/leagues/_pick_x_info.html.erb
+++ b/app/views/seasons/leagues/_pick_x_info.html.erb
@@ -26,7 +26,7 @@
     <strong>Draft Type:</strong> <%= @league.draft_type.humanize.titleize %>
   </p>
   <p>
-    <strong>Entry:</strong> Free
+    <strong>Entry:</strong> <%= @league.entry %>
   </p>
   <p>
     <strong>Players Per Team:</strong> <%= @league.num_draft_rounds %>
