--- a/app/views/leagues/_pick_x_info.html.erb
+++ b/app/views/leagues/_pick_x_info.html.erb
@@ -1,5 +1,5 @@
 <div id="league-info">
-  <h1><%= @league.leagueable.name %></h1>
+  <h1><%= @league.name %></h1>
   <p>
     <% if current_page?(game_competition_league_path(@game, @competition, @league)) %>
       <% if current_user && current_user.leagues.include?(@league) %>
@@ -23,6 +23,17 @@
     </p>
   <% end %>
   <p>
+    <strong>Event:</strong> <%= @league.leagueable.name %>
+  </p>
+  <p>
+    <strong>Event Start:</strong> <%= @league.leagueable.start_date.localtime.strftime("%m/%d/%Y") %>
+  </p>
+  <% if @league.description %>
+    <p>
+      <%= @league.description %>
+    </p>
+  <% end %>
+  <p>
     <strong>Draft Type:</strong> <%= @league.draft_type  == 'special' ? "Pick X" : @league.draft_type.humanize.titleize %>
   </p>
   <p>
@@ -31,11 +42,13 @@
   <p>
     <strong>Entry:</strong> <%= @league.entry %>
   </p>
+  <% if @league.prize_payouts %>
+  <p>
+    <strong>Prizes:</strong> <%= simple_format(@league.prize_payouts) %>
+  </p>
+  <% end %>
   <p>
     <strong>Players Per Team:</strong> <%= @league.num_draft_rounds %>
-  </p>
-  <p>
-    <strong>Event Start:</strong> <%= @league.leagueable.start_date.localtime.strftime("%m/%d/%Y") %>
   </p>
   <% if @league.draft_type == 'special' && !@league.leagueable.about.blank? %>
     <p>
