fixed homepage bug

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -102,7 +102,7 @@
               <h3>Upcoming Events</h3>
               <div class="event-container">
                 <a href="/games/mtg/seasons/vsls9/leagues" class="homepage-event-link">
-                  <p class="event-button">Vintage Super League (Jan 15-Mar 3/26)</p>
+                  <p class="event-button">Vintage Super League (Jan 15-Mar 26)</p>
                 </a>
               </div>
               <div class="event-container">
