--- a/app/views/leagues/_pick_x_info.html.erb
+++ b/app/views/leagues/_pick_x_info.html.erb
@@ -22,17 +22,17 @@
       <strong>Commissioner:</strong> <%= @league.admin.name %>
     </p>
   <% end %>
+  <% if @league.description %>
+    <p>
+      <%= simple_format(@league.description) %>
+    </p>
+  <% end %>
   <p>
     <strong>Event:</strong> <%= @league.leagueable.name %>
   </p>
   <p>
     <strong>Event Start:</strong> <%= @league.leagueable.start_date.localtime.strftime("%m/%d/%Y") %>
   </p>
-  <% if @league.description %>
-    <p>
-      <%= @league.description %>
-    </p>
-  <% end %>
   <p>
     <strong>Draft Type:</strong> <%= @league.draft_type  == 'special' ? "Pick X" : @league.draft_type.humanize.titleize %>
   </p>
