--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -49,7 +49,7 @@
             </tr>
           </thead>
           <tbody>
-            <% League.joins('LEFT JOIN competitions ON competitions.id = leagues.leagueable_id').where('competitions.id = ? AND competitions.start_date > ? AND leagues.public = ?', @competition.id, Time.now, true).each do |league| %>
+            <% League.joins('LEFT JOIN competitions ON competitions.id = leagues.leagueable_id').where('competitions.id = ? AND competitions.start_date > ? AND leagues.public = ?', @competition.id, Time.now, true).order(:id).each do |league| %>
               <tr>
                 <td>
                   <%= league.name %>
