--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -61,7 +61,7 @@
                   <%= league.entry %>
                 </td>
                 <td>
-                  <button type="button" class="btn btn-secondary btn-sm btn-more-info" data-toggle="modal" data-target="#prize-payout-modal">
+                  <button type="button" class="btn btn-secondary btn-sm btn-more-info" data-toggle="modal" data-target="#prize-payout-modal-<%= league.id %>">
                     $
                   </button>
                 </td>
@@ -78,7 +78,7 @@
                   <%= link_to 'Play Now', game_competition_league_path(league.leagueable.game, league.leagueable, league), class: 'btn btn-sm btn-primary' %>
                 </td>
               </tr>
-              <div id="prize-payout-modal" class="modal" tabindex="-1" role="dialog">
+              <div id="prize-payout-modal-<%= league.id %>" class="modal" tabindex="-1" role="dialog">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
