--- a/app/views/leagues/_pick_x_info.html.erb
+++ b/app/views/leagues/_pick_x_info.html.erb
@@ -17,43 +17,63 @@
     <p>
       <em>Public league</em>
     </p>
-  <% else %>
-    <p>
-      <strong>Commissioner:</strong> <%= @league.admin.name %>
-    </p>
   <% end %>
   <% if @league.description %>
     <p>
       <%= simple_format(@league.description) %>
     </p>
   <% end %>
-  <p>
-    <strong>Event:</strong> <%= @league.leagueable.name %>
-  </p>
-  <p>
-    <strong>Event Start:</strong> <%= @league.leagueable.start_date.localtime.strftime("%m/%d/%Y") %>
-  </p>
-  <p>
-    <strong>Draft Type:</strong> <%= @league.draft_type  == 'special' ? "Pick X" : @league.draft_type.humanize.titleize %>
-  </p>
-  <p>
-    <strong>Pick Type:</strong> <%= @league.pick_type&.titleize %>
-  </p>
-  <p>
-    <strong>Entry:</strong> <%= @league.entry %>
-  </p>
-  <% if @league.prize_payouts %>
-  <p>
-    <strong>Prizes:</strong> <%= simple_format(@league.prize_payouts) %>
-  </p>
-  <% end %>
-  <p>
-    <strong>Players Per Team:</strong> <%= @league.num_draft_rounds %>
-  </p>
-  <% if @league.draft_type == 'special' && !@league.leagueable.about.blank? %>
-    <p>
-      <strong>About This Event:</strong>
-    </p>
-    <%=  markdown(@league.leagueable.about) %>
-  <% end %>
+  <div class="row">
+    <div class="col-md">
+      <% unless @league.public %>
+        <p>
+          <strong>Commissioner:</strong> <%= @league.admin.name %>
+        </p>
+      <% end %>
+      <p>
+        <strong>Event:</strong> <%= @league.leagueable.name %>
+      </p>
+      <p>
+        <strong>Event Start:</strong> <%= @league.leagueable.start_date.localtime.strftime("%m/%d/%Y") %>
+      </p>
+      <p>
+        <strong>Entry:</strong> <%= @league.entry %>
+      </p>
+      <% if @league.prize_payouts %>
+      <p>
+        <strong>Prizes:</strong> <%= simple_format(@league.prize_payouts) %>
+      </p>
+      <% end %>
+    </div>
+    <div class="col-md">
+      <p>
+        <strong>Draft Type:</strong> <%= @league.draft_type  == 'special' ? "Pick X" : @league.draft_type.humanize.titleize %>
+        <button type="button" class="btn btn-secondary btn-sm btn-more-info" data-toggle="modal" data-target="#draft-types-modal">
+          ?
+        </button>
+      </p>
+      <p>
+        <strong>Pick Type:</strong> <%= @league.pick_type&.titleize %>
+      </p>
+      <p>
+        <strong>Players Per Team:</strong> <%= @league.num_draft_rounds %>
+      </p>
+      <% if @league.pick_type == 'player' %>
+        <p>
+          <strong>Scoring:</strong> Each player will earn your team three points per match win at <%= @league.leagueable.name %> and one point per draw. Players that make the Top 8 will earn your team another three points, plus three points per match win in the Top 8.
+        </p>
+      <% elsif @league.pick_type == 'card' %>
+        <p>
+          <strong>Scoring:</strong> Each card will earn your team three points per copy that appears in the maindeck of a deck in Top 8 of MC Cleveland, plus one point per copy in the the sideboard of a deck.
+        </p>
+      <% end %>
+      <% if @league.draft_type == 'special' && !@league.leagueable.about.blank? %>
+        <p>
+          <strong>About This Event:</strong>
+        </p>
+        <%=  markdown(@league.leagueable.about) %>
+      <% end %>
+    </div>
+    <%= render 'leagues/draft_types_modal' %>
+  </div>
 </div>
