--- a/app/views/admin/competitions/edit.html.erb
+++ b/app/views/admin/competitions/edit.html.erb
@@ -32,7 +32,7 @@
       </div>
       <div class="form-group required">
         <%= f.label :score_as_of_round, "Score as of Round", class: "control-label" %>
-        <%= f.number_field :score_as_of_round, min: 0, max: 16, required: true, class: "form-control" %>
+        <%= f.text_field :score_as_of_round, min: 0, max: 16, required: true, class: "form-control" %>
       </div>
       <div class="actions">
         <%= f.submit "Update", class: "btn btn-primary" %>
