fixed round comparison

--- a/app/views/leagues/_pick_em.html.erb
+++ b/app/views/leagues/_pick_em.html.erb
@@ -1,5 +1,5 @@
 <% if @league.leagueable.start_date < Time.now %>
-  <% if @league.leagueable.score_as_of_round > 0 %>
+  <% if @league.leagueable.score_as_of_round != '0' %>
     <p>
       <em>(Through Round <%= @league.leagueable.score_as_of_round %>)</em>
     </p>
